syntax = "proto3";

package co.topl.grpc.models;

import 'models/verification_key.proto';
import 'models/box.proto';

message Proposition {
  oneof sealed_value {
    PropositionPermanentlyLocked permanentlyLocked = 1;

    PropositionKnowledgeCurve25519 knowledgeCurve25519 = 3;
    PropositionKnowledgeEd25519 knowledgeEd25519 = 4;
    PropositionKnowledgeExtendedEd25519 knowledgeExtendedEd25519 = 5;
    PropositionKnowledgeHashLock knowledgeHashLock = 6;

    PropositionCompositionalThreshold compositionalThreshold = 7;
    PropositionCompositionalAnd compositionalAnd = 8;
    PropositionCompositionalOr compositionalOr = 9;
    PropositionCompositionalNot compositionalNot = 10;

    PropositionContextualHeightLock contextualHeightLock = 11;
    PropositionContextualRequiredTransactionIO contextualTransactionIO = 12;
  }
}

message PropositionPermanentlyLocked {}

message PropositionKnowledgeCurve25519 {
  VerificationKeyCurve25519 key = 1;
}

message PropositionKnowledgeEd25519 {
  VerificationKeyEd25519 key = 1;
}

message PropositionKnowledgeExtendedEd25519 {
  VerificationKeyExtendedEd25519 key = 1;
}

message PropositionKnowledgeHashLock {
  bytes valueDigest = 1;
}

message PropositionCompositionalThreshold {
  int32 threshold = 1;
  repeated Proposition propositions = 2;
}

message PropositionCompositionalAnd {
  Proposition a = 1;
  Proposition b = 2;
}

message PropositionCompositionalOr {
  Proposition a = 1;
  Proposition b = 2;
}

message PropositionCompositionalNot {
  Proposition a = 1;
}

message PropositionContextualHeightLock {
  int64 height = 1;
}
message PropositionContextualRequiredTransactionIO {
  repeated Requirement requirements = 1;

  message Requirement {
    Box box = 1;
    BoxLocation location = 2;
  }
}

message BoxLocation {
  int32 index = 1;
  IO location = 2;
  enum IO {
    INPUT = 0;
    OUTPUT = 1;
  }
}
